--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <br/>
                 <input type="text" placeholder="Enter description" id="detail"/>
                 <br/>
-                <button onclick="addList()">Add</button>
+                <button id="addDetails">Add</button>
 
                 <!-- <button type="button" id="updBtn" onclick="update()">Update</button> -->
 
@@ -29,7 +29,7 @@
             <h2 id="detailh2">Todo List</h2>
             <hr/>
           <ul id="listContainer">
-
+            
           </ul>
 
         </div>
